modal - fixing scroll bug on safari, fixing css defects on mobile, remove borderStyle

--- a/src/Modal/modal.module.scss
+++ b/src/Modal/modal.module.scss
@@ -14,53 +14,58 @@
   &.active {
     display: block;
   }
+}
 
-  .modal-overlay {
-    z-index: 1000;
-    background: rgba(0, 0, 0, 0.6);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+.modal-overlay {
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.modal {
+  background: white;
+  border-radius: 20px;
+  display: block;
+  max-height: 80vh;
+  overflow: auto;
+  padding: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: calc(100% - 30px);
+  z-index: 1001;
+
+  &-content {
+    padding: 60px 0 0;
   }
 
-  .modal {
-    display: block;
-    background: white;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1001;
-    padding: 20px;
-    max-height: 80vh;
-    overflow: auto;
+  &-header,
+  &-subheader {
+    margin: 0 0 15px;
+  }
+
+  @media screen and (min-width: $mobile) {
+    width: 575px;
+  }
+
+  @media screen and (min-width: $tablet) {
     width: 50%;
-
-    &.round {
-      border-radius: 20px;
-    }
-
-    &-content {
-      padding: 60px 0 0;
-    }
-
-    &-header,
-    &-subheader {
-      margin: 0 0 15px;
-    }
   }
+}
 
-  .close {
-    @include closeX();
-    padding: 0px;
+.close {
+  @include closeX();
+  padding: 0px;
 
-    &-icon-wrapper {
-      display: flex;
-      padding: 9px;
-      border-radius: 50px;
-      border: 1px solid $gray-6;
-    }
+  &-icon-wrapper {
+    display: flex;
+    padding: 9px;
+    border-radius: 50px;
+    border: 1px solid $gray-6;
   }
 }
